force-app/main/default/objects/Account/fields/dasda__c.field-meta.xml
<CustomField>
    <fullName>dasda__c</fullName>
    <label>dasda</label>
    <length>25</length>
    <type>Text</type>
</CustomField>