force-app/main/default/objects/Account/fields/Field1__c.field-meta.xml
<CustomField>
    <fullName>Field1__c</fullName>
    <description>This is a sample field</description>
    <label>Field1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>