force-app/main/default/objects/Account/fields/Level__c.field-meta.xml
<CustomField>
    <fullName>Level__c</fullName>
    <description>This is a sample field</description>
    <label>Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>