force-app/main/default/objects/Account/fields/Test1__c.field-meta.xml
<CustomField>
    <fullName>Test1__c</fullName>
    <label>Test1</label>
    <length>155</length>
    <type>Text</type>
</CustomField>