force-app/main/default/objects/Account/fields/What__c.field-meta.xml
<CustomField>
    <fullName>What__c</fullName>
    <label>What</label>
    <length>12</length>
    <type>Text</type>
</CustomField>